--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -28,9 +28,9 @@
 
     <h2 class="archive__item-title" itemprop="headline">
       {% if post.link %}
-        <a href="{{ post.link }}">{{ title }}</a> <a href="{ post.paperurl }" rel="permalink"><i class="fa fa-link" aria-hidden="true" title="permalink"></i><span class="sr-only">Permalink</span></a>
+        <a href="{{ post.link }}">{{ title }}</a> <a href="{{ post.paperurl }}"><i class="fa fa-link" aria-hidden="true" title="permalink"></i><span class="sr-only">Permalink</span></a>
       {% else %}
-        <a href="{ post.paperurl }" rel="permalink">{{ title }}</a>
+        <a href="{ post.paperurl }">{{ title }}</a>
       {% endif %}
     </h2>
     
