--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -38,8 +38,10 @@
       <p class="page__meta"><i class="fa fa-clock" aria-hidden="true"></i> {% include read-time.html %}</p>
     {% endif %}
 
-        {% if post.collection == 'teaching' %}
-          <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
+        {% if post.collection == 'teaching' and post.enddate %}
+          <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.startdate | default: "1900-01-01" | date: "%Y" } - { post.enddate | default: "1900-01-01" | date: "%Y" }}  </p>
+        {% elsif post.collection == 'teaching' %}
+          <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }}  </p>
         {% elsif post.collection == 'publications' and post.venue%}
           <p>Published in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
         {% endif %}
