--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -39,7 +39,9 @@
     {% endif %}
 
         {% if post.collection == 'teaching' and post.enddate %}
-          <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.startdate | default: "1900-01-01" | date: "%Y" }} - {{ post.enddate | default: "1900-01-01" | date: "%Y" }}  </p>
+          <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} - {{ post.enddate | default: "1900-01-01" | date: "%Y" }}  </p>
+        {% elsif post.collection == 'teaching' and post.semester %}
+          <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.semester}} {{ post.date | default: "1900-01-01" | date: "%Y" }}  </p>
         {% elsif post.collection == 'teaching' %}
           <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }}  </p>
         {% elsif post.collection == 'publications' and post.venue%}
